--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,md}\""
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.555.0",
     "next": "^14.1.0",
